docker, swagger e integração com o postgres
