# src/modules/cars/entities/Category.ts
@@ -1,9 +1,18 @@
 import { v4 as uuidv4 } from 'uuid';
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from 'typeorm';
 
-class Specification {
+@Entity('categories')
+class Category {
+    @PrimaryColumn()
     id?: string;
+
+    @Column()
     name: string;
+
+    @Column()
     description: string;
+
+    @CreateDateColumn()
     created_at: Date;
 
     constructor() {
@@ -13,4 +22,4 @@ class Specification {
     }
 }
 
-export { Specification };
+export { Category };
